feature: major refactor
what:
setup.R,
packrat,
remove python code,
routes: add Rprofile and .here for here() package,
ide: vscode workspace file,
refactor filestructure docs
R gitignore file

why:
relative routes with here
package management with packrat
setup script
edit R with VS Code
simpler Readme
better repo management with gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,51 @@
-docs/site/
+# History files
+.Rhistory
+.Rapp.history
 
-# OSX Junk
-.DS_Store
+# Session Data files
+.RData
 
-# test cache
-.cache/*
-tests/__pycache__/*
-*.pytest_cache/
+# User-specific files
+.Ruserdata
+
+# Example code in package build process
+*-Ex.R
+
+# Output files from R CMD build
+/*.tar.gz
+
+# Output files from R CMD check
+/*.Rcheck/
+
+# RStudio files
+.Rproj.user/
+
+# produced vignettes
+vignettes/*.html
+vignettes/*.pdf
+
+# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
+.httr-oauth
+
+# knitr and R markdown default cache directories
+*_cache/
+/cache/
+
+# Temporary files created by R markdown
+*.utf8.md
+*.knit.md
+
+# R Environment Variables
+.Renviron
+
+# pkgdown site
+docs/
+
+# translation temp files
+po/*~
+
+# Packrat
+packrat/lib*/
+# !packrat/bundles/*
+
+old/**/*
