feature: knitting, vscode extensions
What:
- docs: knitting
- gitignore for RStudio
- extensions for vscode
Why:
- knit with vscode

# Jira issue link:

# Title: Type, Title: Present tense Summary
# start upper case, don't end with a period
# Type: chore, docs, feat, fix, refactor, style, or test.
# No more than 50 chars. #### 50 chars is here: #

# Body: Explain *what* and *why* (not *how*).
# Wrap at 72 chars. ################################## which is here: #
# Why:
# - Explain the reasons you made this change
# - Make a new bullet for each reason
# - Each line should be under 72 characters

# feat: (new feature for the user, not a new feature for build script)
# fix: (bug fix for the user, not a fix to a build script)
# docs: (changes to the documentation)
# style: (formatting, missing semi colons, etc; no production code change)
# refactor: (refactoring production code, eg. renaming a variable)
# test: (adding missing tests, refactoring tests; no production code change)
# chore: (updating grunt tasks etc; no production code change)

#Co-authored-by: name <user@users.noreply.github.com>

# add to global ~/.gitconfig
# [commit]
#    template = ~/.gitmessage

--- a/{{ cookiecutter.repo_name }}/.gitignore
+++ b/{{ cookiecutter.repo_name }}/.gitignore
@@ -67,7 +67,7 @@ target/
 .idea
 
 # VS Code
-.vscode/
+# .vscode/
 
 # Spyder
 .spyproject/
@@ -88,3 +88,7 @@ target/
 # Mypy cache
 .mypy_cache/
 packrat/lib*/
+
+# R Studio files
+.Rproj.user
+.Rhistory
